Removed excessive overflow-y and resolved the 1px mystery (with @JennaBarbara)

--- a/angular/src/app/discovery/beacon/beacon-search.component.scss
+++ b/angular/src/app/discovery/beacon/beacon-search.component.scss
@@ -31,15 +31,10 @@ mat-drawer-content {
   padding: 1rem 1rem 0 1rem;
 }
 
-.search-results {
-  overflow-y: auto;
-}
-
 ddap-beacon-search-result-table {
   height: 100%;
   display: flex;
   flex-grow: 1;
-  overflow-y: auto;
 }
 
 .search-progress-backdrop {
