--- a/angular/src/app/shared/data-table/data-table.component.scss
+++ b/angular/src/app/shared/data-table/data-table.component.scss
@@ -24,8 +24,6 @@ ag-grid-angular {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  overflow-y: auto;
-
 }
 
 .download-toolbar {
